# Random

./: .gitignore  CHANGELOG.md  LICENSE  PACKAGE_CONTENTS.md  QUICKSTART.md  README.md  RRann.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md  rrann.h  smoke_test.c
docs/: CROSS_PLAY.md  FINDINGS.md  GAME_DESIGNERS.md  OPEN_SEQUENCE.md  RESEARCH_HEAD_BIAS.md  ROADMAP.md
examples/: basic_usage.py  crit_chance.py  demo_terminal.py  loot_table.py  mixer_u64.py  mp_bake_chunks.py  procgen_chunks.py  server_roll.py  shuffle_deck.py
go/rrann/: go.mod  harvest_cgo.go  harvest_soft.go  harvest_test.go  rrann.go  rrann_test.go
research/: README.md
research/analysis/: analyze_structure.py  playgames_large_files.txt  playgames_top5.txt  sample_data.json  validate_rrann.py
research/sts/: STS_AND_TESTU01.md  build_testu01_rrann.sh  export_sts_input.py  run_nist_sts.sh  run_sts.sh  sts_run.sh  testu01_rrann.c
rrann/: __init__.py  __main__.py  core.py  extract.py  fairness.py  generator.py  health.py  legacy.py  simulate.py
rust/rrann-core/: Cargo.toml
rust/rrann-core/examples/: parity_print.rs
rust/rrann-core/src/: c_api.rs  harvest.rs  lib.rs  wasm_api.rs
scripts/: bench_rrann.py  parity_rust_python.py
tests/: parity_report.json  test_rrann.py  test_server_roll.py  vectors.json  vectors_commit.json
web/: demo.html  extract_float_demo.html  seed_commit_demo.html  three_scatter_demo.html
