[package]
name = "rrann-core"
version = "0.2.0"
edition = "2021"
description = "RRann helpers + harvest (MPFR native / soft WASM)"
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/example/rrann"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
sha2 = "0.10"
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
rug = { version = "1.30", default-features = false, features = ["float", "std"], optional = true }
rust_decimal = { version = "1.42", features = ["maths"], optional = true }

[features]
default = ["vectors", "native-harvest"]
vectors = []
native-harvest = ["rug"]
soft-harvest = ["rust_decimal"]
wasm = ["wasm-bindgen", "soft-harvest"]

[dev-dependencies]
serde_json = "1"
